fixed issue where changing state drpdown didnt reset county; adjusted legend spacing

--- a/static/chart.css
+++ b/static/chart.css
@@ -20,14 +20,14 @@
     border: 2px solid;
     border-color: black;
     width: 150;
-    fill:beige;
+    fill:aliceblue;
     
 }
 
 .legend-text {
-    font-size: 16px;
+    font-size: 12px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-anchor: middle;
+    text-anchor:start;
     fill: black;
 }
 
